--- a/BlackJackWebServer/BlackJackWebApp/web/css/Game.css
+++ b/BlackJackWebServer/BlackJackWebApp/web/css/Game.css
@@ -10,7 +10,7 @@ and open the template in the editor.
 
 body {
  margin: 0;
- background: url("../images/Background/premium_classic_bj_ss123.png");
+ background: url("../images/Background/bj_background.jpg");
  background-repeat:no-repeat;
  -webkit-background-size: cover;
  -moz-background-size: cover;
