--- a/BlackJackWebServer/BlackJackWebApp/web/css/Game.css
+++ b/BlackJackWebServer/BlackJackWebApp/web/css/Game.css
@@ -19,6 +19,9 @@ body {
  color: white;
 }
 
+.spacer {
+    margin-top: 40px; /* define margin as you see fit */
+}
 
 .Effect{
     box-shadow: red 0px 0px 5px;
